2010-09-23  Charlie Zender  <zender@uci.edu>

	* Cleanup chunking initialization prior to bug hunt

2010-09-19  Charlie Zender  <zender@uci.edu>

	* Note that ncks 4.0.3 and earlier suffer from a bug Henry caught
	in nco_cpy_var_dfn_lmt() where the shuffle and deflate arguments
	to nco_def_var_deflate() were reversed. This would cause
	propagation of deflate and shuffle attributes from in.nc to out.nc
	to go awry when shuffle or deflate, but not both, were true.

	* Continue error handling of string-conversion, now strtod()

2010-09-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: chunking everywhere, ncrename bugfix, ncks -m
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Begin codebase-wide error handling of string-conversion to int
	with nco_sng_cnv_err(), and error handling of string-conversion to
	float with nco_sng_cnv_err(). Many problems encountered.
	Using ncflint.c to prototype strtod() handling and 
	ncpdq.c to prototype strtol() handling.

2010-09-17  Charlie Zender  <zender@uci.edu>

	* Make ncpdq follow same rules as ncbo, ncra, etc. in whether to
	pack grid properties. Accomplish this by adding ncpdq (packing,
	not permuting) to list of operators that return true in call to
	nco_is_rnk_prs_rth_opr().

2010-09-16  Charlie Zender  <zender@uci.edu>

	* Prevent ncpdq from packing coordinate variables
	Coordinate variables are 1D, so packing saves little space,
	and makes resulting files hard to read.
	If users wish to pack coordinate variables, we should implement
	new packing policies that explicitly pack coordinate variables.

	* Add synonym/pseudonym section to nco.texi

	* Update notes on propagating dfl_lvl and cnk_sz into ncap2

2010-09-15  Charlie Zender  <zender@uci.edu>

	* Add DMG file info to homepage

2010-09-14  Charlie Zender  <zender@uci.edu>

	* Document chunking better in nco.texi
