@@ -1,6 +1,11 @@
 2010-09-23  Charlie Zender  <zender@uci.edu>
 
-	* Cleanup chunking initialization prior to bug hunt
+	* Rebuild ncap2...seems to work fine
+
+	* Sort var_sct in nco.h; 
+	Change var_sct.is_fix_var from int to short;
+
+	* Cleanup chunking/deflation initialization
 
 2010-09-19  Charlie Zender  <zender@uci.edu>
 
